# BranchWise

./: Dockerfile  README.md  codecov.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  updates.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto-assign.yml  dependabot.yml  labeler.yml
.github/workflows/: build-tauri-builder.yml  pull-request-chores.yml  release.yml  rust.yaml  rust.yml  vue.yml
src/: App.vue  listeners.ts  main.ts  vite-env.d.ts  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  main.rs
src-tauri/src/database/: database.rs  storage.rs
src-tauri/src/errors/: git_commit_error.rs  git_error.rs  git_object_error.rs  mod.rs
src-tauri/src/git/: git_blob.rs  git_branch.rs  git_commit.rs  git_commit_author.rs  git_files.rs  git_folders.rs  git_head.rs  git_project.rs  git_project_state.rs  git_tag.rs  git_tree.rs  git_user.rs  mod.rs  object.rs  project_folder.rs
src-tauri/src/log/: console_logger.rs  mod.rs
src-tauri/src/packs/: index.rs  mod.rs  pack.rs
src/components/: AddProject.vue  BranchesSidebar.vue  CommitTopbar.vue  DialogComponent.vue  GreetComponent.vue  NavbarComponent.vue  Project.vue  SidebarComponent.vue  ToolbarComponent.vue  TopbarComponent.vue
src/components/Dialogs/: ConfirmationDialog.vue  ContextMenu.vue
src/components/Project/: BranchesSidebar.vue  CommitHistory.vue
src/components/Project/Branches/: ExpansionPanel.vue
src/components/Project/Commit/: CommitDetailItem.vue  CommitDetails.vue  CommitListItem.vue
src/components/Sidebar/: SidebarItem.vue
src/components/Sidebar/Branches/: ExpansionPanel.vue
src/enums/: prependVariant.ts
src/pages/: IndexPage.vue  ProjectPage.vue
src/plugins/: index.ts  vuetify.ts
src/router/: index.ts
src/stores/: app.ts  dialogs.ts  project.ts
src/tests/: example.test.ts  main.test.ts
src/types/: branchTreeItem.ts  directory.ts  gitAuthor.ts  gitBranch.ts  gitCommit.ts  gitErrors.ts  gitHead.ts  gitProject.ts  gitProjectState.ts  gitUser.ts  tauri.ts  user.ts
