[package]
name = "branchwise"
version = "0.0.8"
description = "Git was never easier"
authors = ["hateofhades"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.3"
strum_macros = "0.26.4"
tempdir = "0.3.7"
thiserror = "2.0.3"
lazy_static = "1.5.0"
tokio = "1.41.1"
flate2 = { version = "1.0.34", features = ["zlib-ng"], default-features = false }
sha-1 = "0.10.1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
hex = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 2
debug = true
codegen-units = 16

[profile.release]
codegen-units = 16

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
