[package]
name = "branchwise"
version = "0.0.10"
description = "Git was never easier"
authors = ["hateofhades"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tempdir = "0.3.7"
thiserror = "2.0.12"
lazy_static = "1.5.0"
tokio = "1.46.1"
flate2 = { version = "1.1.2", features = ["zlib-ng"], default-features = false }
sha-1 = "0.10.1"
tauri-plugin = "2.2.0"
tauri-plugin-shell = "2.2.2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-process = "2.2.2"
hex = "0.4.3"
log = "0.4.27"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 2
debug = true
codegen-units = 16

[profile.release]
codegen-units = 16

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.8.1"
